--- a/basecode/Css/index.css
+++ b/basecode/Css/index.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   top: 0;
   font-family: 'Arial', sans-serif;
   font-style: normal;
@@ -62,4 +62,69 @@ header > .trill {
   border: none;
   padding: 4px;
   background: rgb(232, 231, 227);
+}*/
+
+body {
+  font-family: 'Arial', sans-serif;
+  font-size: 16px;
+  margin: 0;
+  display: grid;
+  overflow: scroll;
+  /*grid-template-columns: 15% 85%;
+  grid-template-rows: 100% 10%;*/
+  grid-template-areas:
+  "a b b b b"
+  "a b b b b"
+  "a b b b b"
+  "a b b b b"
+  "f f f f f"
+}
+
+.loginForm {
+  background: rgb(77, 83, 108);
+  color: white;
+  grid-area: a;
+}
+
+.lform {
+  margin-left: 15px;
+  position: absolute;
+  top: 200px;
+}
+
+.loginForm > .lform input[type="text"], .lform input[type="password"] {
+  width: 90%;
+  margin: 10px;
+  padding: 5px;
+  border: 1px solid rgb(69, 69, 69);
+  border-radius: 3px;
+}
+
+.registerForm {
+  background: rgb(231, 231, 231);
+  grid-area: b;
+}
+
+
+
+.footer {
+  background: rgb(255, 255, 255);
+  border-top: 1px solid rgb(62, 61, 61);
+  grid-area: f;
+}
+
+label {
+  margin: 10px;
+}
+
+.trill {
+  font-family: 'Candal', sans-serif;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 50px;
+  letter-spacing: 3px;
+  position: absolute;
+  margin: 15px;
+  top: 70px;
 }
