--- a/basecode/Css/feed.css
+++ b/basecode/Css/feed.css
@@ -17,7 +17,7 @@ body {
 
 .searchBar {
   position: absolute;
-  left: 300px;
+  left: 350px;
 }
 
 .empty {
@@ -27,10 +27,8 @@ body {
 }
 
 .emptyy {
-  border: 2px solid rgb(222, 222, 222);
+  border: 2px solid rgb(77, 83, 108);
   background: white;
-  border-radius: 10px;
-  margin: 5px;
   height: 80px;
 }
 
@@ -40,6 +38,7 @@ body {
   height: 50px;
   border: 1px dashed grey;
   border-radius: 4px;
+  resize: none;
 }
 
 .emptyy form input[type="submit"] {
@@ -56,8 +55,9 @@ body {
 .post {
   border: 2px solid rgb(222, 222, 222);
   background: white;
-  border-radius: 10px;
+  border-radius: 5px;
   margin: 5px;
+  height: 80px;
 }
 
 
@@ -77,3 +77,37 @@ body {
   border-radius: 3px;
   width: 50px;
 }
+
+.home {
+  font-family: 'Candal', sans-serif;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 25px;
+  position: absolute;
+  right: 375px;
+}
+
+.prof {
+  font-family: 'Candal', sans-serif;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 25px;
+  position: absolute;
+  right: 475px;
+}
+
+.logout {
+
+  font-family: 'Candal', sans-serif;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  }
+
+  .
