--- a/basecode/Css/profile.css
+++ b/basecode/Css/profile.css
@@ -5,7 +5,7 @@ body {
   font-size: 16;
   margin: 0;
   grid-template-columns: 25% auto 25%;
-  grid-template-rows: 40px 80px auto;
+  grid-template-rows: 40px 150px auto;
   background: rgb(231, 231, 231);
 }
 
@@ -17,8 +17,15 @@ body {
 
 .searchBar {
   position: absolute;
-  left: 300px;
+  left: 350px;
 }
+
+.posts {
+  grid-column: 2 / 3;
+  grid-row: 2 / 4;
+  background: green;
+}
+
 .navBar > .searchBar form input[type="text"]{
   padding: 5px;
   border: 1px solid rgb(222, 222, 222);
@@ -36,7 +43,58 @@ body {
   width: 50px;
 }
 
+.profile {
+  grid-column: 2 / 3;
+  grid-row: 2/ 3;
+}
+
 .posts {
   grid-column: 2 / 3;
-  grid-row: 2 / 4;
+  grid-row: 3 / 4;
+  background: rgb(231, 231, 231);
 }
+
+.post {
+  border: 2px solid rgb(222, 222, 222);
+  background: white;
+  border-radius: 10px;
+  margin: 5px;
+}
+
+.details {
+  border: 2px solid rgb(77, 83, 108);
+  background: white;
+  text-decoration: none;
+}
+
+.home {
+  font-family: 'Candal', sans-serif;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 25px;
+  position: absolute;
+  right: 375px;
+}
+
+.prof {
+  font-family: 'Candal', sans-serif;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 25px;
+  position: absolute;
+  right: 475px;
+}
+
+.logout {
+
+  font-family: 'Candal', sans-serif;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  }
