--- a/basecode/Css/search.css
+++ b/basecode/Css/search.css
@@ -18,14 +18,13 @@ body {
 
 .searchBar {
   position: absolute;
-  left: 300px;
+  left: 350px;
 }
 
 .searchRes {
   grid-column: 2 / 3;
   grid-row: 2 / 4;
-  /*background: rgb(231, 231, 231)*/
-  background: green;
+  background: rgb(231, 231, 231)
 }
 
 .navBar > .searchBar form input[type="text"]{
@@ -45,11 +44,43 @@ body {
   width: 50px;
 }
 
+.result {
+  border: 2px solid rgb(222, 222, 222);
+  background: white;
+  border-radius: 5px;
+  margin: 5px;
+  height: auto;
+  text-decoration: none;
+}
+
 .home {
   font-family: 'Candal', sans-serif;
   text-decoration: none;
   color: white;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 25px;
   position: absolute;
+  right: 375px;
 }
+
+.prof {
+  font-family: 'Candal', sans-serif;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 25px;
+  position: absolute;
+  right: 475px;
+}
+
+.logout {
+
+  font-family: 'Candal', sans-serif;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  }
